@startuml

class User {
  -int Id
  -string Login
  -string PasswordHash
  -Role Role
  -DateOnly CreatedDate
  +bool CheckPassword(string password)
}

enum Role {
  Manager
  Director
  Admin
}

class Order {
  -int Id
  -int CustomerId
  -int EmployeeId
  -int ConstructionId
  -OrderStatus Status
  -DateOnly CreationDate
  -DateOnly CompletionDate
  -string Description
  -decimal Total
  +decimal CalculateTotal()
}

enum OrderStatus {
  New
  InProgress
  Completed
  Cancelled
}

class Customer {
  -int Id
  -string Name
  -string Phone
  -string Address
  -string Email
}

class Work {
  -int Id
  -int UnitId
  -string Name
  -decimal Price
  -string Description
}

class OrderWork {
  -int Id
  -int OrderId
  -int ServiceId
  -decimal Quantity
}

class Material {
  -int Id
  -int UnitId
  -string Name
  -decimal Price
  -string Description
}

class OrderMaterial {
  -int Id
  -int OrderId
  -int MaterialId
  -decimal Amount
}

class Unit {
  -int Id
  -string Name
}

class Construction {
  -int Id
  -string Name
  -string Address
}

class Employee {
  -int Id
  -string Name
  -string Position
  -string Phone
  -int UserId
}

class Company {
  -int Id
  -int DirectorId
  -string Name
  -string Address
  -string Phone
  -string Email
  -string TaxNumber
}

' Связи
User "1" -- "1" Employee : Authenticates
Order "*" -- "1" Customer : Belongs to
Order "*" -- "1" Construction : For
Order "*" -- "1" Employee : Managed by
Order "1" -- "*" OrderService : Includes
Order "1" -- "*" OrderMaterial : Includes
OrderService "*" -- "1" Service : References
Service "*" -- "1" Unit : References
OrderMaterial "*" -- "1" Material : References
Material "*" -- "1" Unit : References
Company "1" -- "1" Employee : References

@enduml